[package]
name = "cactive_hypixel_api"
description = "CactiveNetwork Hypixel API for extracting and managing data"
repository = "https://github.com/caykey/cactive_hypixel_api"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }